cargo-features = ["edition2024"]

[package]
name = "irlman"
version = "0.1.0"
edition = "2024"
default-run = "irlman"

[[bin]]
name = "irlman"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
