cargo-features = ["edition2024"]

[package]
name = "irlman"
version = "0.1.0"
edition = "2024"
default-run = "irlman"

[[bin]]
name = "irlman"

[[bin]]
name = "irlman-server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.12"
